// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAm20ZSBkkKIWT741-yw30Pg5lgh6Oori4976C4eU_bVBcA"`;

exports[`feature-random should implement random correctly 2`] = `"kQA4kyOOQoY0BQJyvda1kGFc1q7dRS_pEDE0XYXvWPtl5r68"`;

exports[`feature-random should implement random correctly 3`] = `"kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQAm20ZSBkkKIWT741-yw30Pg5lgh6Oori4976C4eU_bVBcA",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16298n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAm20ZSBkkKIWT741-yw30Pg5lgh6Oori4976C4eU_bVBcA",
            "to": "kQA4kyOOQoY0BQJyvda1kGFc1q7dRS_pEDE0XYXvWPtl5r68",
            "type": "internal",
            "value": 9972273000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAm20ZSBkkKIWT741-yw30Pg5lgh6Oori4976C4eU_bVBcA",
          "to": "kQA4kyOOQoY0BQJyvda1kGFc1q7dRS_pEDE0XYXvWPtl5r68",
          "type": "internal",
          "value": 9972273000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14186n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQA4kyOOQoY0BQJyvda1kGFc1q7dRS_pEDE0XYXvWPtl5r68",
            "to": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
            "type": "internal",
            "value": 9949538000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQA4kyOOQoY0BQJyvda1kGFc1q7dRS_pEDE0XYXvWPtl5r68",
          "to": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
          "type": "internal",
          "value": 9949538000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14360n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
            "to": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
            "type": "internal",
            "value": 9926621000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
          "to": "kQBgrfZvnj5RmyoLJ8F3KwXiNkPqo7zEVMRBa9FtQsBQ7FlQ",
          "type": "internal",
          "value": 9926621000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3286n,
      },
    ],
  },
]
`;
